--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
               </div>
               <div class="card-body border-secondary">
                 <h3 class="card-title">Science</h3>
-                <p class="card-text">Research and development is my strong suit. I've examined biochar processes, studied novel materials for electronics, and worked on making the planet's largest fusion reactor more robust, among other things.</p>
+                <p class="card-text">Basic R&D.</p>
                 <a href="science.html" class="btn btn-outline-secondary">View</a>
               </div>
             </div>
@@ -70,7 +70,7 @@
               </div>
               <div class="card-body border-secondary">
                 <h3 class="card-title">Engineering</h3>
-                <p class="card-text">No year is complete for me without building something. Solar cars, doorbells, trebuchets? Simulations, gravitational waves, Discord bots? Whatever it is, I've probably played around with it at some point.</p>
+                <p class="card-text">Things I've made.</p>
                 <a href="engineering.html" class="btn btn-outline-secondary">View</a>
               </div>
             </div>
@@ -86,7 +86,7 @@
               </div>
               <div class="card-body border-secondary">
                 <h3 class="card-title">Art</h3>
-                <p class="card-text">I love photography, videography, and sound. But that doesn't mean I don't take them seriously. I've been involved in several local productions and work as an event photographer. Feed your senses. </p>
+                <p class="card-text">Photo, video, and sound. </p>
                 <a href="art.html" class="btn btn-outline-secondary">View</a>
               </div>
             </div>
