--- a/engineering.html
+++ b/engineering.html
@@ -32,9 +32,9 @@
       <div class="overlay"></div>
       <div class="container">
         <div class="descriptioncent" style="background-color:rgba(14, 14, 10, 0.7); border-color: #eedc6e; border-width: 5px; border-radius: 1%">
-          <h1> Built different, coded same. </h1>
+          <h1> Built different. </h1>
           <br>
-          <h3>I like seeing things come to life. Below you'll find a variety of my software and hardware projects, alongside miscellaneous fun stuff.</h3>
+          <h3>I like seeing things come to life. Below you'll find my software and hardware projects. And miscellaneous fun stuff.</h3>
     </header>
           <div class="row">
             
@@ -48,7 +48,7 @@
                 </div>
                 <div class="card-body border-secondary">
                   <h3 class="card-title">Belousov Zhabotinsky Automaton</h3>
-                  <p class="card-text">Math and modeling for a course in partial differential equations. Explores a less-studied supposed model of the famous B-Z reaction.</p>
+                  <p class="card-text">Math and modeling for a course in partial differential equations. Here I examined a less-studied supposed model of a chemical reaction that makes waves!</p>
                   <a href="" class="btn btn-outline-secondary">View</a>
                 </div>
               </div>
@@ -80,7 +80,7 @@
                 </div>
                 <div class="card-body border-secondary">
                   <h3 class="card-title">LIGO Gravitational Waves</h3>
-                  <p class="card-text">Data science using LIGO interferometer open data, as part of a course in numerical physics. Performing signal processing and analysis of a black hole merger.</p>
+                  <p class="card-text">Some data science practice using LIGO interferometer open data. In summary, signal processing and analysis of a black hole merger.</p>
                   <a href="" class="btn btn-outline-secondary">View</a>
                 </div>
               </div>
@@ -112,7 +112,7 @@
                 </div>
                 <div class="card-body border-secondary">
                   <h3 class="card-title">MPPT Solar Charge Controller</h3>
-                  <p class="card-text">Placeholder.</p>
+                  <p class="card-text">I was given a large solar panel for free, and wanted to use it. A pile of electronics that currently charges my family's mobile devices, but which can charge batteries too.</p>
                   <a href="" class="btn btn-outline-secondary">View</a>
                 </div>
               </div>
@@ -128,7 +128,7 @@
                 </div>
                 <div class="card-body border-secondary">
                   <h3 class="card-title">Python/Rust Lattice Annealing</h3>
-                  <p class="card-text">Placeholder </p>
+                  <p class="card-text">First hacked together to solve an exam problem in my statmech class, this code simulates how crystal structures form to minimize energy. The visualization part of the Rust version is now a bit broken, sadly.</p>
                   <a href="" class="btn btn-outline-secondary">View</a>
                 </div>
               </div>
@@ -143,8 +143,8 @@
                   </a>
                 </div>
                 <div class="card-body border-secondary">
-                  <h3 class="card-title">ORNL Computer Vision Monstrosity</h3>
-                  <p class="card-text">Placeholder.</p>
+                  <h3 class="card-title">Feature-Sparse Reconstruction</h3>
+                  <p class="card-text">In order to study <a href="#">shattering deuterium neon</a> pellets, I needed some tools. With synchronized high-speed cameras, I attempted to localize and estimate sizes in a cloud of fragments.</p>
                   <a href="" class="btn btn-outline-secondary">View</a>
                 </div>
               </div>
@@ -160,7 +160,7 @@
                 </div>
                 <div class="card-body border-secondary">
                   <h3 class="card-title">PDE Numerical Stability</h3>
-                  <p class="card-text">Placeholder.</p>
+                  <p class="card-text">A brief study of when a handful of finite difference schemes for solving partial differential equations break down.</p>
                   <a href="" class="btn btn-outline-secondary">View</a>
                 </div>
               </div>
@@ -176,7 +176,7 @@
                 </div>
                 <div class="card-body border-secondary">
                   <h3 class="card-title">IoT Flat Panel Lamp</h3>
-                  <p class="card-text">Placeholder </p>
+                  <p class="card-text">I had an idea to turn the optics of a computer screen's backlight into a lamp. My roommates naturally decided to make it into an IoT device.</p>
                   <a href="" class="btn btn-outline-secondary">View</a>
                 </div>
               </div>
@@ -192,7 +192,7 @@
                 </div>
                 <div class="card-body border-secondary">
                   <h3 class="card-title">MIT 8.223 <br> Trebuchet</h3>
-                  <p class="card-text">Placeholder.</p>
+                  <p class="card-text">For the final project in an analytical mechanics class, a friend and I put together a trebuchet which, lamentably, does not throw 90kg stones 300m.</p>
                   <a href="" class="btn btn-outline-secondary">View</a>
                 </div>
               </div>
@@ -208,7 +208,7 @@
                 </div>
                 <div class="card-body border-secondary">
                   <h3 class="card-title">tEp Sub Doorbell Oscillator</h3>
-                  <p class="card-text">Placeholder.</p>
+                  <p class="card-text">See that function generator? It's getting replaced with this cardboard box on top. I always thought it was wasteful to continuously draw 40W just to provide signal for a doorbell.</p>
                   <a href="" class="btn btn-outline-secondary">View</a>
                 </div>
               </div>
@@ -224,7 +224,7 @@
                 </div>
                 <div class="card-body border-secondary">
                   <h3 class="card-title">Discord Counting Channel Bot</h3>
-                  <p class="card-text">Placeholder </p>
+                  <p class="card-text">To document the emergent phenomenon of people in Discord channels deciding to spontaneously send messages counting up, I built a bot to track peoples' counting and display analytics.</p>
                   <a href="" class="btn btn-outline-secondary">View</a>
                 </div>
               </div>
@@ -240,7 +240,7 @@
                 </div>
                 <div class="card-body border-secondary">
                   <h3 class="card-title">AP Government Cap Tracker</h3>
-                  <p class="card-text">Placeholder.</p>
+                  <p class="card-text">This was a very, very, very dumb idea. Google Sheets is not a backend.</p>
                   <a href="" class="btn btn-outline-secondary">View</a>
                 </div>
               </div>
@@ -256,7 +256,7 @@
                 </div>
                 <div class="card-body border-secondary">
                   <h3 class="card-title">C++ Runge-Kutta Library</h3>
-                  <p class="card-text">Placeholder </p>
+                  <p class="card-text">At this point, I don't remember what inspired me to implement this in high school, but serendipitously it's been useful a few times since then.</p>
                   <a href="" class="btn btn-outline-secondary">View</a>
                 </div>
               </div>
@@ -272,7 +272,7 @@
                 </div>
                 <div class="card-body border-secondary">
                   <h3 class="card-title">Experimental Breads</h3>
-                  <p class="card-text">Placeholder</p>
+                  <p class="card-text">Pretty much exactly what you'd expect. A catalog of some of my breads.</p>
                   <a href="" class="btn btn-outline-secondary">View</a>
                 </div>
               </div>
@@ -288,7 +288,7 @@
                 </div>
                 <div class="card-body border-secondary">
                   <h3 class="card-title">FRC Robot Chassis</h3>
-                  <p class="card-text">Placeholder.</p>
+                  <p class="card-text">I designed things for my high school robotics team.</p>
                   <a href="" class="btn btn-outline-secondary">View</a>
                 </div>
               </div>
