--- a/science.html
+++ b/science.html
@@ -34,7 +34,7 @@
         <div class="descriptioncent" style="background-color:rgba(14, 14, 10, 0.7); border-color: #eedc6e; border-width: 5px; border-radius: 1%">
           <h1> Basic research. </h1>
           <br>
-          <h3>Poking at different systems and getting useful data is an addiction of sorts. Here's some things I've seen so far.</h3>
+          <h3>Poking at diverse systems and extracting decent data is an addiction of sorts. Here's some things I've seen so far.</h3>
     </header>
 
           <div class="row">
@@ -49,7 +49,7 @@
                 </div>
                 <div class="card-body border-secondary">
                   <h3 class="card-title">Cd<sub>3</sub>As<sub>2</sub> Epitaxial Films</h3>
-                  <p class="card-text">Placeholder.</p>
+                  <p class="card-text">In high school, I spent some time helping to study systematically strained nanometer-scale films of cadmium arsenide grown in ultrahigh vacuum, one of the recently uncovered class of topological Dirac semimetals.</p>
                   <a href="" class="btn btn-outline-secondary">View</a>
                 </div>
               </div>
@@ -65,7 +65,7 @@
                 </div>
                 <div class="card-body border-secondary">
                   <h3 class="card-title">Oxygen-lean Torrefied Biomass</h3>
-                  <p class="card-text">Placeholder.</p>
+                  <p class="card-text">The smelliest project I've worked on so far. For a couple months, I overhauled the data acquisition system for an experimental reactor designed to make biochar in the field.</p>
                   <a href="" class="btn btn-outline-secondary">View</a>
                 </div>
               </div>
@@ -81,7 +81,7 @@
                 </div>
                 <div class="card-body border-secondary">
                   <h3 class="card-title">Shattering Deuterium Neon</h3>
-                  <p class="card-text">Placeholder </p>
+                  <p class="card-text">It turns out the best known way to safely shut down a large fusion reactor that's lost plasma stability is to shove in a bunch of ice. Sort of. It also turns out this is a very hard thing to do in a controlled way. I studied this process, and to that end developed <a href="#">this monstrosity.</a></p>
                   <a href="" class="btn btn-outline-secondary">View</a>
                 </div>
               </div>
@@ -96,8 +96,8 @@
                   </a>
                 </div>
                 <div class="card-body border-secondary">
-                  <h3 class="card-title">Carbon Capture Products</h3>
-                  <p class="card-text">Work in progress.</p>
+                  <h3 class="card-title">Carbon Capture Enhanced</h3>
+                  <p class="card-text">This one's exciting, because I'm starting off with "absolutely no idea" what I'm doing. Stay tuned.</p>
                   <a class="btn btn-outline-secondary">Coming soon!</a>
                 </div>
               </div>
