--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
       <div class="container">
         <div class="descriptioncent" style="background-color:rgba(14, 14, 10, 0.7); border-color: #eedc6e; border-width: 5px; border-radius: 15%">
           <h1> Want to get in touch? </h1>
-            <h3> Find me here. </h3>
+            <h3> Please feel free to do so here: </h3>
             <div class="row">
               <div class="column">
                 <a href="mailto:jade.chongsathapornpong@gmail.com"><img src="icons/email-24px.svg#svgView(preserveAspectRatio(none))" alt="Email" style="filter: invert(100%); position:relative; width:50%; top:-10px"></a>
