Add art, responsive text

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
       <div class="overlay"></div>
       <div class="container">
         <div class="descriptioncent">
-          <h1> Jade Chongsathapornpong </h1>
+          <span class="lg-view"><h1> Jade Chongsathapornpong </h1></span>
+          <span class="sm-view"><h2> Jade Chongsathapornpong </h2></span>
             <h3> Science, Engineering, & Art </h3>
             <a href="about.html"><button class="btn btn-lg btn-outline-secondary">Read more</button></a>
         </div>
