Reformat content pages, new bio

--- a/about.html
+++ b/about.html
@@ -12,99 +12,55 @@
     <link href='https://fonts.googleapis.com/css?family=Overpass Mono' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="bio.css">
 
     <title>About</title>
 
   </head>
 
-    <body>
-      <!-- Navbar -->
-      <nav id="NAVMENU" class="navbar navbar-expand-lg fixed-top "></nav>
-      <script src="header.js"></script>
+<body>
 
-      <!-- Set background -->
-      <style>
-      header {
-        background-image: url('images/sea.jpg');
-      }
-      </style>
+  <header>
+    <div id="top-badge">
+      <a href="index.html"><h3>Home</h3></a>
+    </div>
+  </header>
 
-    <header class="header">
-      <div class="overlay"></div>
-      <div class="container">
-        <div class="description">
-          <h1>Jade C.</h1>
-          <br>
-            <h3> Hi! I'm an MIT physics student working toward more sustainable energy and materials. That said, I'm interested in much more. Feel free to read my <a href="Jade_2_22.pdf">resume</a> or browse my focus areas below. </h3>
-        </div>
-      </div>
-    </header>
-
-    <div class="panels" style="background-color:rgba(14, 14, 10, 0.7); border-color: #eedc6e; border-width: 5px; border-radius: 15%">
-      <h1> Pick a branch to explore. </h1>
-      <br>
-        <div class="row">
-          <div class="column">
-            <div class="card">
-              <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
-                <img src="images/dinoflagellates.jpg" class="img-fluid"/>
-                <a href="science.html">
-                  <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
-                </a>
-              </div>
-              <div class="card-body border-secondary">
-                <h3 class="card-title">Science</h3>
-                <p class="card-text">Basic R&D.</p>
-                <a href="science.html" class="btn btn-outline-secondary">View</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="column">
-            <div class="card">
-              <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
-                <img src="images/robots.jpg" class="img-fluid"/>
-                <a href="engineering.html">
-                  <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
-                </a>
-              </div>
-              <div class="card-body border-secondary">
-                <h3 class="card-title">Engineering</h3>
-                <p class="card-text">Things I've made.</p>
-                <a href="engineering.html" class="btn btn-outline-secondary">View</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="column">
-            <div class="card">
-              <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
-                <img src="images/pattern_s.jpg" class="img-fluid"/>
-                <a href="art.html">
-                  <div class="mask" style="background-color: rgba(207, 23, 23, 0.15);"></div>
-                </a>
-              </div>
-              <div class="card-body border-secondary">
-                <h3 class="card-title">Art</h3>
-                <p class="card-text">Photo, video, and sound. </p>
-                <a href="art.html" class="btn btn-outline-secondary">View</a>
-              </div>
-            </div>
-          </div>
-
-          
-
-        </div>
+  <div class="box-wrapper">
+    <div class="spacer"></div>
+    <div id="box1">
+        <h1>Jade Chongsathapornpong</h1>
     </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <div id="box2">
+        <h3>Physics   |   B.S. MIT 2024</h3>
+        <p>"Specialization is for insects."</p>
+    </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <div id="box3">
+      <p>
+        I tend to work on anything that might nudge us toward a more sustainable future, whether it's
+        tuning surface exchange kinetics in ceramics for fuel cells and electrolyzers,
+        reconstructing shattering chunks of solid deuterium for the ITER fusion reactor,
+        or techno-economically assessing solar electric maize mills in rural Malawi.
+      </p>
+      <p>
+        Naturally, I've crossed many paths. After all, where's the fun in wearing one hat? Sure, it might be more employable, but I like to think diversity
+        in modi operandorum affords me a unique perspective: a beginner's mind as a physicist, a photographer, a materials scientist,
+        a writer, a developer, a cinematographer, an electrical engineer, a friend, a machinist, an explorer, a human being.
+      </p>
+      <p>
+        I'd now like to invite you to head back and browse my one-off projects, broader research efforts, or artistic endeavors. Thanks for reading!
+      </p>
+    </div>
 
-    <script type="text/javascript" src='main.js'></script>
 
-  </body>
+
+  </div>
+
+
+
+  <script type="text/javascript" src='main.js'></script>
+
+</body>
 </html>
