--- a/art.html
+++ b/art.html
@@ -17,6 +17,8 @@
 
   </head>
 
+<body>
+
   <header>
     <div id="top-badge">
       <a href="index.html"><h3>Home</h3></a>
@@ -28,9 +30,9 @@
         <div style="background-color:rgba(14, 14, 10, 0.7); width: 100%; margin: 5%; padding: 5%; border-color: #eedc6e; border-width: 5px; border-radius: clamp(30px, 4vh, 60px);">
           <h1> Vision. </h1>
           <br>
-          <h3>I'm entranced by bespoke images and compelling sequences.</h3>
+          <h3>Entranced by bespoke images and compelling sequences.</h3>
           <br>
-          <h3><a href="https://flickr.com/photos/certaingemstone/">Photo</a>  |  <a href="https://www.youtube.com/channel/UC8GnPd0c0x6EZqEbMlgcplQ">Video</a>  |  <a href="https://www.youtube.com/channel/UC8GnPd0c0x6EZqEbMlgcplQ">Pricing</a></h3>
+          <h3><a href="https://flickr.com/photos/certaingemstone/">Photo</a>  |  <a href="https://www.youtube.com/channel/UC8GnPd0c0x6EZqEbMlgcplQ">Video</a>  |  <a href="https://www.youtube.com/channel/UC8GnPd0c0x6EZqEbMlgcplQ">Services</a></h3>
         </div>
       </div>
     </header>
