--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
 <footer>
   <div id="socials">
-    <img src="icons/LI-In-Bug-wht.png"></img>
-    <img src="icons/Github-Mark-Light-120px-plus.png"></img>
+    <a href="https://www.linkedin.com/in/jade-chongsathapornpong-171a07155/"><img src="icons/LI-In-Bug-wht.png"></img></a>
+    <a href="https://github.com/Certaingemstone"><img src="icons/Github-Mark-Light-120px-plus.png"></img></a>
   </div>
 </footer>
 
