--- a/science.html
+++ b/science.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
   <head>
-
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,33 +11,30 @@
     <link href='https://fonts.googleapis.com/css?family=Overpass Mono' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="main.css">
+  </head>
 
+<body>
+  
     <title>Science</title>
 
-  </head>
-    <body>
-      <!-- Navbar -->
-      <nav id="NAVMENU" class="navbar navbar-expand-lg fixed-top "></nav>
-      <script src="header.js"></script>
-
-      <!-- Set background -->
-      <style>
-      header {
-        background-image: url('images/portal.jpg');
-      }
-      </style>
-
-    <header class="header">
-      <div class="overlay"></div>
-      <div class="container">
-        <div class="descriptioncent" style="background-color:rgba(14, 14, 10, 0.7); border-color: #eedc6e; border-width: 5px; border-radius: 1%">
-          <h1> Basic research. </h1>
-          <br>
-          <h3>Poking at diverse systems and extracting decent data is an addiction of sorts. Here's some things I've seen so far.</h3>
+    <header>
+      <div id="top-badge">
+        <a href="index.html"><h3>Home</h3></a>
+      </div>
     </header>
 
+      <header class="header">
+        <div class="container">
+          <div style="background-color:rgba(14, 14, 10, 0.7); width: 100%; margin: 5%; padding: 5%; border-color: #eedc6e; border-width: 5px; border-radius: clamp(30px, 4vh, 60px);">
+            <h1> Exploration. </h1>
+            <br>
+            <h3>My specialty: Probing physical systems and asking the right questions. Given enough time, of course.</h3>
+          </div>
+        </div>
+      </header>
+
           <div class="row">
-            
+
             <div class="column">
               <div class="card">
                 <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
@@ -48,13 +44,13 @@
                   </a>
                 </div>
                 <div class="card-body border-secondary">
-                  <h3 class="card-title">Cd<sub>3</sub>As<sub>2</sub> Epitaxial Films</h3>
+                  <h2 class="card-title">Cd<sub>3</sub>As<sub>2</sub> Epitaxial Films</h2>
                   <p class="card-text">In high school, I spent some time helping to study systematically strained nanometer-scale films of cadmium arsenide grown in ultrahigh vacuum, one of the recently uncovered class of topological Dirac semimetals.</p>
                   <a href="" class="btn btn-outline-secondary">View</a>
                 </div>
               </div>
             </div>
-  
+
             <div class="column">
               <div class="card">
                 <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
@@ -64,13 +60,13 @@
                   </a>
                 </div>
                 <div class="card-body border-secondary">
-                  <h3 class="card-title">Oxygen-lean Torrefied Biomass</h3>
+                  <h2 class="card-title">Oxygen-lean Torrefied Biomass</h2>
                   <p class="card-text">The smelliest project I've worked on so far. For a couple months, I overhauled the data acquisition system for an experimental reactor designed to make biochar in the field.</p>
                   <a href="" class="btn btn-outline-secondary">View</a>
                 </div>
               </div>
             </div>
-  
+
             <div class="column">
               <div class="card">
                 <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="dark">
@@ -80,7 +76,7 @@
                   </a>
                 </div>
                 <div class="card-body border-secondary">
-                  <h3 class="card-title">Shattering Deuterium Neon</h3>
+                  <h2 class="card-title">Shattering Deuterium Neon</h2>
                   <p class="card-text">It turns out the best known way to safely shut down a large fusion reactor that's lost plasma stability is to shove in a bunch of ice. Sort of. It also turns out this is a very hard thing to do in a controlled way. I studied this process, and to that end developed <a href="#">this monstrosity.</a></p>
                   <a href="" class="btn btn-outline-secondary">View</a>
                 </div>
@@ -96,13 +92,13 @@
                   </a>
                 </div>
                 <div class="card-body border-secondary">
-                  <h3 class="card-title">Carbon Capture Enhanced</h3>
+                  <h2 class="card-title">Carbon Capture Enhanced</h2>
                   <p class="card-text">This one's exciting, because I'm starting off with "absolutely no idea" what I'm doing. Stay tuned.</p>
                   <a class="btn btn-outline-secondary">Coming soon!</a>
                 </div>
               </div>
             </div>
-            
+
           </div>
 
           </div>
