--- a/about.html
+++ b/about.html
@@ -45,12 +45,12 @@
         or techno-economically assessing solar electric maize mills in rural Malawi.
       </p>
       <p>
-        Naturally, I've crossed many paths. After all, where's the fun in wearing one hat? Sure, it might be more employable, but I like to think diversity
+        Naturally, I've crossed many paths. After all, where's the fun in wearing one hat? I like to think diversity
         in modi operandorum affords me a unique perspective: a beginner's mind as a physicist, a photographer, a materials scientist,
         a writer, a developer, a cinematographer, an electrical engineer, a friend, a machinist, an explorer, a human being.
       </p>
       <p>
-        I'd now like to invite you to head back and browse my one-off projects, broader research efforts, or artistic endeavors. Thanks for reading!
+        I'd like to invite you to head back and browse my one-off projects, broader research efforts, or artistic endeavors.
       </p>
     </div>
 
