Edit bio, remove contact page

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
         a writer, a developer, a cinematographer, an electrical engineer, a friend, a machinist, an explorer, a human being.
       </p>
       <p>
-        I'd like to invite you to head back and browse my one-off projects, broader research efforts, or artistic endeavors.
+        Thank you for stopping by. I'd like to invite you to head back and browse my one-off projects, broader research efforts, or artistic endeavors.
       </p>
     </div>
 
